Toggle only Performance/Quiet for ASUS profile

--- a/home/.local/share/applications/asus-profile-toggle.desktop
+++ b/home/.local/share/applications/asus-profile-toggle.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Type=Application
 Name=Toggle ASUS Profile
-Exec=asusctl profile next
+Exec=asus-profile-toggle
 Icon=preferences-system-power-management
