--- a/home/.config/systemd/user/zeroclaw.service
+++ b/home/.config/systemd/user/zeroclaw.service
@@ -9,6 +9,7 @@ ExecStart=%h/.local/bin/zeroclaw daemon
 Restart=on-failure
 RestartSec=10
 Environment=RUST_LOG=warn
+Environment=PATH=%h/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/bin
 
 [Install]
 WantedBy=default.target
